--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="gallery">
        
       </div>
-      <button type="button" class="load-more">Load more</button>
+      <button type="button" class="load-more is-hidden">Load more</button>
     </div>
     
     <script type="module" src="./index.js"></script>
